--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
+aiohttp==3.5.1
 aiorcon==0.6.8
+async-timeout==3.0.1
+attrs==18.2.0
+chardet==3.0.4
+idna==2.8
+Jinja2==2.10
+MarkupSafe==1.1.0
+multidict==4.5.2
+yarl==1.3.0
